--- a/package.json
+++ b/package.json
@@ -4,17 +4,27 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
-      "ts-node": "10.7.0",
       "@types/node": "^16.11.10",
+      "@types/swagger-ui-express": "^4.1.3",
+      "eslint-config-prettier": "^8.8.0",
+      "eslint-plugin-prettier": "^4.2.1",
+      "ts-node": "10.7.0",
       "typescript": "4.5.2"
    },
    "dependencies": {
-      "typeorm": "0.3.17",
+      "@types/dotenv": "^8.2.0",
+      "@types/express": "^4.17.17",
+      "dotenv": "^16.3.1",
+      "express": "^4.18.2",
+      "pg": "^8.4.0",
+      "prettier": "^2.8.8",
       "reflect-metadata": "^0.1.13",
-      "pg": "^8.4.0"
+      "swagger-ui-express": "^5.0.0",
+      "typeorm": "0.3.17"
    },
    "scripts": {
-      "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "start:dev": "ts-node src/index.ts",
+      "typeorm": "typeorm-ts-node-commonjs",
+      "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
    }
 }
