--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
       "@types/swagger-ui-express": "^4.1.3",
       "eslint-config-prettier": "^8.8.0",
       "eslint-plugin-prettier": "^4.2.1",
-      "ts-node": "10.7.0",
+      "ts-node": "^10.9.1",
       "typescript": "4.5.2"
    },
    "dependencies": {
@@ -23,8 +23,11 @@
       "typeorm": "0.3.17"
    },
    "scripts": {
-      "start:dev": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs",
+      "build": "tsc",
+      "start:dev": " tsc && ts-node src/index.ts",
+      "typeorm": "ts-node ./node_modules/typeorm/cli.js",
+      "migration:show": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:show -d src/data-source.ts",
+      "migration:run": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d src/data-source.ts",
       "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
    }
 }
